Fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/**{
-	border: 1px dashed black;
-}*/
 /*------------HeaderContainer------------*/
 .header{
 	margin-top: 15px;
@@ -11,42 +8,53 @@
 	font-family: Arial;
 	font-size: 13px;
 	color: #666;
+	padding: 0;
+	overflow: hidden;
 
-	height: 35px;
 }
 .header p{
 	display: inline;
 	margin-bottom: 180px;
+	vertical-align: middle;
 	margin-left: 5px;
 	margin-right: 5px;
+}
+.header div{
+	display: inline-block;
+	vertical-align: middle;
+	text-align: center;
+	/*set size of div that contains images*/
+	width: 35px;
+	height: 35px;
+	margin-left: 4px;
+	margin-right: 4px;
+}
+.header div img{
+	width: 20px;
+	height: auto;
+	display: inline-block;
+}
+.headerImages.icon1,.headerImages.icon2{
+	margin-top: 7px;
 }
 .header p:hover{
 	text-decoration: underline;
 }
-.headerImages{
-	width: 20px;
-	height: auto;
-	vertical-align: middle;
-	margin-left: 10px;
-	margin-right: 10px;
-}
-img:nth-child(5){
+.headerImages.userIcon{
 	width:33px;
 }
-/*.headerImages:hover{
+/*enlarge grid and icon*/
+.headerImages:hover{
 	width: 22px;
 }
-img:nth-child(5):hover{
+/*enlarge userIcon*/
+.headerImages.userIcon:hover{
 	width:35px;
-}*/
-
-
-
+}
 
 /*------------Search Container------------*/
 .searchContainer{
-/*	border: 2px solid blue;
-*/	width: 100%;
+	width: 100%;
 	text-align: center;
 	vertical-align: middle;
 	margin-top: 17%;
@@ -138,7 +146,6 @@ html,body{
     height: 100%;
 }
 body{
-	/*border: 2px solid green;*/
 	position: relative;
 	height: 0;
 }
